fixed tests for SystemTaskWorker